# PTAM-GPL

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
camera_calibrator/: CMakeLists.txt
demoPTAM/: CMakeLists.txt
demoPTAM/src/: main.cc
dependencies/: FindCVD.cmake  FindGVars3.cmake  FindTooN.cmake
install_scripts/: cvd.sh  gvars.sh  toon.sh
libPTAM/: CMakeLists.txt
libPTAM/dependencies/: FindAssimp.cmake  FindCVD.cmake  FindDC1394.cmake  FindGVars3.cmake  FindTooN.cmake  TODO
libPTAM/external_libs/: CMakeLists.txt
libPTAM/external_libs/TooN/: config.status
libPTAM/external_libs/cvd/: .sourcefiles  config.status
libPTAM/external_libs/cvd/cvd_src/: .directory
libPTAM/external_libs/cvd/progs/: video_play_source
libPTAM/external_libs/gvars/: .directory  config.status
libPTAM/external_libs/gvars/src/: .directory
libPTAM/headers/: ARDriver.h  ARModel.h  AssimpRenderer.h  EyeGame.h  System.h  Tracker.h  VideoSource_UDP.h
libPTAM/include/: ARDriver.h  ARModel.h  AssimpRenderer.h  EyeGame.h  GLWindow2.h  OpenGL.h  System.h  private_fix.h
libPTAM/src/: ARDriver.cc  ARModel.cc  AssimpRenderer.cc  Bundle.cc  EyeGame.cc  GLWindow2.cc  System.cc  Textfile.cc  Tracker.cc  VideoSource_Linux_V4L.cc  VideoSource_UDP.cc
pyPTAM/: CMakeLists.txt  README
pyPTAM/Python/: Lego.mtl  clevo.cfg  dirLightAmbDiffSpec.frag  dirLightAmbDiffSpec.vert  dirlightdiffambpix.frag  fragmentShader.frag  microsoft.cfg  pointLight.frag  settings.cfg  test_PTAM.py  textureShader.frag  vertexShader.vert
pyPTAM/Python/model/: d606301.tga  d606303.tga  d606304.tga  d606305.tga  d63331.tga  d63332.tga  d63337.TGA  d63338.TGA  d63339.tga  d63340.tga  d63342.tga  d63343.tga  d63344.tga  d63345.tga  d63348.tga  d63349.tga
pyPTAM/src/: pyPTAM.cpp
src/: .CMakeLists.txt.kate-swp  .directory
